Update relative links in contents

--- a/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
@@ -36,7 +36,7 @@ $$
 
 ## Aantal beduidende cijfers
 
-Bij [benaderingsregels](benaderingsregels) zullen we soms het aantal beduidende cijfers moeten tellen. Eens we de beduidende cijfers van een getal kunnen aanduiden, tellen we gewoon hoeveel er zijn, en dat geeft ons het **aantal beduidende cijfers**.
+Bij [benaderingsregels](../benaderingsregels) zullen we soms het aantal beduidende cijfers moeten tellen. Eens we de beduidende cijfers van een getal kunnen aanduiden, tellen we gewoon hoeveel er zijn, en dat geeft ons het **aantal beduidende cijfers**.
 
 | Getal                 | Beduidende cijfers | Aantal beduidende cijfers |
 | --------------------- | ------------------ | ------------------------- |
