--- a/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
@@ -7,7 +7,7 @@ description: "In deze les leggen we uit hoe je eenheden kan omzetten, zoals bijv
 image: img/liter_conversion.png
 ---
 
-Vaak wordt er gevraagd om een eindresultaat te noteren in [SI-eenheden](intro#si-eenheden-maken-duidelijke-afspraken), terwijl de opgave niet in SI-eenheden gegeven is. Dan is het belangrijk om die eenheden te kunnen omzetten naar de SI-eenheden.
+Vaak wordt er gevraagd om een eindresultaat te noteren in [SI-eenheden](../intro#si-eenheden-maken-duidelijke-afspraken), terwijl de opgave niet in SI-eenheden gegeven is. Dan is het belangrijk om die eenheden te kunnen omzetten naar de SI-eenheden.
 
 Soms zullen we een eenheid ook omzetten om beter te begrijpen wat ze betekent. Zo kunnen we ons beter voorstellen hoe lang 2 uren duren, eerder dan hoe lang 7200 seconden duren, ondanks dat de seconde de SI-eenheid van tijd is.
 
@@ -15,17 +15,17 @@ Er zijn dus verschillende situaties waarbij we eenheden zullen moeten omzetten. 
 
 ## Van en naar prefixen
 
-In de les over [prefixen](prefixen) zagen we al hoe we eenheden konden omzetten waarvan enkel de prefix verschilde. Hierin zijn drie gevallen te onderscheiden:
+In de les over [prefixen](../prefixen) zagen we al hoe we eenheden konden omzetten waarvan enkel de prefix verschilde. Hierin zijn drie gevallen te onderscheiden:
 
-1. Het [omzetten van een prefix naar een macht van $10$](prefixen#een-prefix-omzetten-naar-een-macht-van-10), zoals van $\si{km}$ naar $\cdot 10^3~\si{m}$. Dat doen we door **de prefix te vervangen door de bijhorende macht van $10$**. Daarvoor is het belangrijk dat je de [tabel met prefixen](prefixen#de-belangrijkste-prefixen) uit je hoofd kent.
-2. Het [toevoegen van een prefix aan een eenheid](prefixen#een-prefix-toevoegen-aan-een-eenheid), zoals van $\si{s}$ naar $\si{ms}$. Dat doen we door te vermenigvuldigen met <Blue>de macht van $10$ die hoort bij de prefix</Blue> én te vermenigvuldigen met <Orange>het **omgekeerde van die macht**</Orange>. $5{,}0~\si{s}$ omzetten naar $\si{ms}$, bijvoorbeeld, gaat zo:
+1. Het [omzetten van een prefix naar een macht van $10$](../prefixen#een-prefix-omzetten-naar-een-macht-van-10), zoals van $\si{km}$ naar $\cdot 10^3~\si{m}$. Dat doen we door **de prefix te vervangen door de bijhorende macht van $10$**. Daarvoor is het belangrijk dat je de [tabel met prefixen](../prefixen#de-belangrijkste-prefixen) uit je hoofd kent.
+2. Het [toevoegen van een prefix aan een eenheid](../prefixen#een-prefix-toevoegen-aan-een-eenheid), zoals van $\si{s}$ naar $\si{ms}$. Dat doen we door te vermenigvuldigen met <Blue>de macht van $10$ die hoort bij de prefix</Blue> én te vermenigvuldigen met <Orange>het **omgekeerde van die macht**</Orange>. $5{,}0~\si{s}$ omzetten naar $\si{ms}$, bijvoorbeeld, gaat zo:
 $$
 \begin{aligned}
 5{,}0~\si{s} &= 5{,}0\cdot \orange{10^3}\cdot \underbrace{\blue{10^{-3}} ~\si{s}}_{= \si{ms}}\\
 &= 5{,}0\cdot \orange{10^3}~\blue{\si{ms}}
 \end{aligned}
 $$
-3. Het [omzetten van een prefix naar een andere prefix](prefixen#een-prefix-omzetten-naar-een-andere-prefix), zoals van $\si{kW}$ naar $\si{GW}$. Daarvoor zetten we eerst beide prefixen om naar de bijhorende macht van $10$. Vervolgens vermenigvuldigen we het getal in de opgave met <Blue>de gevraagde macht van $10$</Blue> én met <Orange>het **omgekeerde** van die macht van $10$</Orange>. Ten slotte rekenen we alle machten van $10$ uit, behalve de gevraagde macht. De gevraagde macht kunnen we dan gewoon vervangen door de gevraagde prefix. Stel bijvoorbeeld dat we $300~\si{\green{k}W}$ moeten omzetten naar $\si{\blue{G}W}$. Dat is hetzelfde als $300\cdot\green{10^3}~\si{W}$ omzetten naar $\cdot\blue{10^9}~\si{W}$:
+3. Het [omzetten van een prefix naar een andere prefix](../prefixen#een-prefix-omzetten-naar-een-andere-prefix), zoals van $\si{kW}$ naar $\si{GW}$. Daarvoor zetten we eerst beide prefixen om naar de bijhorende macht van $10$. Vervolgens vermenigvuldigen we het getal in de opgave met <Blue>de gevraagde macht van $10$</Blue> én met <Orange>het **omgekeerde** van die macht van $10$</Orange>. Ten slotte rekenen we alle machten van $10$ uit, behalve de gevraagde macht. De gevraagde macht kunnen we dan gewoon vervangen door de gevraagde prefix. Stel bijvoorbeeld dat we $300~\si{\green{k}W}$ moeten omzetten naar $\si{\blue{G}W}$. Dat is hetzelfde als $300\cdot\green{10^3}~\si{W}$ omzetten naar $\cdot\blue{10^9}~\si{W}$:
 $$
 \begin{aligned}
 300\cdot 10^3~\si{W} &= 300\cdot \underbrace{10^3\cdot\orange{10^{-9}}}_{= 10^{-6}} \cdot\blue{10^9}~\si{W}\\
@@ -34,7 +34,7 @@ $$
 \end{aligned}
 $$
 
-Als je nog niet zo vertrouwd bent met het toevoegen, omzetten of wegwerken van prefixen, lees dan zeker de [les over prefixen](prefixen) nog eens na.
+Als je nog niet zo vertrouwd bent met het toevoegen, omzetten of wegwerken van prefixen, lees dan zeker de [les over prefixen](../prefixen) nog eens na.
 
 ## Tijden omzetten
 
@@ -60,7 +60,7 @@ vergeet ze vroeg of laat toch. Probeer in de plaats daarvan telkens de **afleidi
 begrijpen** zodat je deze tijdens een toets snel op een kladblad kan hermaken.
 Het enige wat je van buiten moet kennen zijn de bovenstaande 2 gelijkheden.
 
-Merk op: we maken gebruik van de [benaderingsregels](benaderingsregels) in de kolom met voorbeelden.
+Merk op: we maken gebruik van de [benaderingsregels](../benaderingsregels) in de kolom met voorbeelden.
 
 ### Van uur naar...
 
