--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -36,7 +36,7 @@ $$
 
 
 Extra uitleg vind je in de les over [rekenen met
-machten](../../wiskunde/rekenen_rationaal/machten/#producten-van-machten).
+machten](../../../wiskunde/rekenen_rationaal/machten/#producten-van-machten).
 
 ## Machten van 10 uitrekenen
 
@@ -103,9 +103,9 @@ $$
 \end{aligned}
 $$
 
-Merk wel op dat nu het aantal [beduidende cijfers](beduidende_cijfers) is
+Merk wel op dat nu het aantal [beduidende cijfers](../beduidende_cijfers) is
 veranderd van 12 naar 4. Je kan het juiste aantal beduidende cijfers
-verkrijgen door de [benaderingsregels](benaderingsregels) toe te passen.
+verkrijgen door de [benaderingsregels](../benaderingsregels) toe te passen.
 
 ## Machten van 10 omzetten
 
