--- a/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
@@ -16,7 +16,7 @@ images:
 image: img/krachtvector.png
 ---
 
-[Kracht](intro) is een maat voor hoe er geduwd of getrokken wordt. Een van
+[Kracht](../intro) is een maat voor hoe er geduwd of getrokken wordt. Een van
 de speciale eigenschappen van de grootheid _kracht_ is dat ze een **vectoriële
 grootheid** is.
 
