--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -5,7 +5,7 @@ weight: 8
 image: img/snelheidsvector.png
 ---
 
-Als er een [resulterende kracht](resulterende_kracht) op een voorwerp
+Als er een [resulterende kracht](../resulterende_kracht) op een voorwerp
 inwerkt, dan zal de **snelheidsvector van dat voorwerp veranderen**. Merk goed
 op dat er staat: **"snelheidsvector"** en niet gewoon "snelheid". De
 snelheidsvector heeft niet alleen een grootte die kan veranderen, maar ook een
@@ -14,7 +14,7 @@ zullen we eerst eens bekijken waarom snelheid juist een vector is.
 
 ## Snelheid is een vector
 
-We leerden in een [eerdere les](krachtvector) al dat kracht een
+We leerden in een [eerdere les](../krachtvector) al dat kracht een
 vectoriële grootheid is. Dat betekent dat een kracht een **grootte, richting en
 zin** heeft. Net als kracht, is **snelheid ook een vectoriële grootheid**. Zo
 is het niet alleen belangrijk hoe snel je rijdt <Mute>(= grootte van de
@@ -87,9 +87,9 @@ Wanneer $\vec{F}_r$ **dezelfde zin** heeft als $\vec{v}$, dan zal het voorwerp
 **versnellen**. Stel dat door wrijving met onder andere de wind er een kracht
 van $50~\si{N}$ inwerkt op de fietsende Maria. Maria trapt zelf echter met een
 kracht van $70~\si{N}$ vooruit. Aan de hand van de
-[kop-staartmethode](../../wiskunde/vector_1/grafisch_optellen/#kop-staartmethode)
+[kop-staartmethode](/lessen/wiskunde/vector_1/grafisch_optellen/#kop-staartmethode)
 kunnen we dan de [resulterende
-kracht](resulterende_kracht#resulterende-kracht-tekenen) tekenen en zien we
+kracht](../resulterende_kracht#resulterende-kracht-tekenen) tekenen en zien we
 dat $\vec{F}_{rM}$ dezelfde zin heeft als de snelheidsvector. Maria zal dus
 **versnellen**.
 
