--- a/src/content/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/index.mdx
@@ -2,25 +2,11 @@
 title: "Licht absorberen, reflecteren en doorlaten"
 date: 2019-01-28T18:36:58+01:00
 weight: 6
-draft: false
 tags: []
-categories: []
-level: ""
-course: ""
-topic: ""
-images:
-    [
-        "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/white_light.png",
-        "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/absorptie.png",
-        "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/reflectie.png",
-        "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/absorptie_reflectie.png",
-        "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/orange.png",
-        "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/licht_doorlaten.png",
-    ]
 image: img/white_light.png
 ---
 
-Een [donker lichaam](lichtbronnen#donkere-lichamen) is een voorwerp dat
+Een [donker lichaam](../lichtbronnen#donkere-lichamen) is een voorwerp dat
 van zichzelf geen licht geeft, bijvoorbeeld een bloem. Hoe zo'n donker lichaam
 eruit ziet hangt af van welk licht erop invalt en wat er gebeurt met dat
 invallend licht. In het algemeen kunnen er drie dingen gebeuren:
