--- a/src/content/lessen/fysica/lichtstralen/beeldvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/beeldvorming/index.mdx
@@ -2,28 +2,11 @@
 title: "Beeldvorming"
 date: 2019-01-29T08:59:42+01:00
 weight: 7
-draft: false
 tags: []
-categories: []
-level: ""
-course: ""
-topic: ""
-images:
-    [
-        "/lessen/fysica/lichtstralen/beeldvorming/img/orange.png",
-        "/lessen/fysica/lichtstralen/beeldvorming/img/orange_beeldvorming.png",
-        "/lessen/fysica/lichtstralen/beeldvorming/img/oog.png",
-        "/lessen/fysica/lichtstralen/beeldvorming/img/sony_a7ii.png",
-        "/lessen/fysica/lichtstralen/beeldvorming/img/divergerend.png",
-        "/lessen/fysica/lichtstralen/beeldvorming/img/convergerend.png",
-        "/lessen/fysica/lichtstralen/beeldvorming/img/evenwijdig.png",
-        "/lessen/fysica/lichtstralen/beeldvorming/img/camera_obscura.png",
-        "/lessen/fysica/lichtstralen/beeldvorming/img/camera_obscura_large_aperture.png",
-    ]
 image: img/orange.png
 ---
 
-Wanneer wit licht [invalt op een sinaasappel](absorberen_reflecteren_doorlaten#reflectie-absorptie)
+Wanneer wit licht [invalt op een sinaasappel](../absorberen_reflecteren_doorlaten#reflectie-absorptie)
 gaan de gereflecteerde lichtstralen alle kanten op. Omdat die oranje
 lichtstralen zo kriskras door elkaar gaan, lijkt het onmogelijk om van elke
 lichtstraal te weten waar ze vandaan kwam.
@@ -86,7 +69,7 @@ wanneer ze op de overstaande wand botsen. Hierdoor **verschijnt er op de wand
 tegenover het gaatje een vrij scherp beeld**.
 
 Omdat lichtstralen zich <Mute>door een homogene middenstof</Mute>
-[rechtlijnig voortplanten](voortplanting#lichtstralen-gaan-in-een-rechte-lijn) en
+[rechtlijnig voortplanten](../voortplanting#lichtstralen-gaan-in-een-rechte-lijn) en
 alle lichtstralen die op de overstaande wand geraken, door het gaatje
 moeten, zien we een **omgedraaid beeld**.
 
