--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -13,15 +13,15 @@ images: []
 title_img: ""
 ---
 
-Een van de meest essentiële vaardigheden voor een uit-de-kluiten-gewassen wiskundige is het kunnen oplossen van **vergelijkingen**. Om te begrijpen _waarom_ het oplossen van vergelijkingen zo belangrijk is, heb je best al wat kennis van [functies](../functies/).
+Een van de meest essentiële vaardigheden voor een uit-de-kluiten-gewassen wiskundige is het kunnen oplossen van **vergelijkingen**. Om te begrijpen _waarom_ het oplossen van vergelijkingen zo belangrijk is, heb je best al wat kennis van [functies](../../functies/).
 
 Kort gezegd zijn de belangrijkste toepassingen van vergelijkingen:
 
-1. Het vinden van de [nulpunten](../functies/nulpunten) van een functie;
-2. Het vinden van de snijpunten van de [grafieken](../functies/grafiek) van twee functies;
+1. Het vinden van de [nulpunten](../../functies/nulpunten) van een functie;
+2. Het vinden van de snijpunten van de [grafieken](../../functies/grafiek) van twee functies;
 3. Het oplossen van raadsels 🧐.
 
-We zullen in een [latere les](functies) het verband tussen functies en vergelijkingen iets uitgebreider bespreken.
+We zullen in een [latere les](../functies) het verband tussen functies en vergelijkingen iets uitgebreider bespreken.
 
 ## Hoe een vergelijking eruit ziet
 
@@ -80,7 +80,7 @@ $$
 \end{aligned}
 $$
 
-Als je de oplossing(en) in een [verzameling](../verzamelingen) stopt, noemen we die verzameling de _oplossingsverzameling_ van de vergelijking. We stellen de oplossingsverzameling meestal voor met de letter $V$.
+Als je de oplossing(en) in een [verzameling](../../verzamelingen) stopt, noemen we die verzameling de _oplossingsverzameling_ van de vergelijking. We stellen de oplossingsverzameling meestal voor met de letter $V$.
 
 De oplossingsverzameling $V$ voor het voorbeeld is dus:
 
