--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -13,7 +13,7 @@ images: []
 title_img: ""
 ---
 
-Een [vergelijking](intro) is de gelijkheid van een _linkerlid_ en een _rechterlid_ waarbij het linkerlid en/of het rechterlid een of meerdere onbekenden bevat. Vaak is er maar één onbekende, namelijk $x$.
+Een [vergelijking](../intro) is de gelijkheid van een _linkerlid_ en een _rechterlid_ waarbij het linkerlid en/of het rechterlid een of meerdere onbekenden bevat. Vaak is er maar één onbekende, namelijk $x$.
 
 Het is meestal de bedoeling om te zoeken naar die waarden voor de onbekende(n) waarvoor de gelijkheid klopt.
 
