--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -6,7 +6,7 @@ wiski: "http://wiski.be/oefenen/eerstegraadsvergelijkingen/take"
 tags: ["vergelijkingen", "algebra"]
 ---
 
-Een [vergelijking](intro) van de eerste graad in één onbekende $x$ is een vergelijking
+Een [vergelijking](../intro) van de eerste graad in één onbekende $x$ is een vergelijking
 waar er maar één onbekende is <Mute>(genaamd $x$)</Mute> en waarbij de
 **hoogste macht van die $x$ gelijk is aan $1$**. Bijvoorbeeld de
 vergelijking
@@ -38,7 +38,7 @@ $$
 
 In deze les zien we hoe we eerstegraadsvergelijkingen in één onbekende ($x$)
 kunnen oplossen in drie stappen. Tijdens deze stappen zullen we de vergelijking
-[omvormen](omvormen).
+[omvormen](../omvormen).
 De drie stappen zijn:
 
 1. **Schoonmaakwerk**: vereenvoudig het linker- en rechterlid zodat er langs
@@ -93,7 +93,7 @@ $$
 ## Alle $x$-en naar links
 
 De volgende stap is om alle termen met een $x$ als lettergedeelte naar de
-linkerkant te brengen. We [vormen de vergelijking om](omvormen) door de
+linkerkant te brengen. We [vormen de vergelijking om](../omvormen) door de
 $$
 \green{a_{rechts}x}
 $$
@@ -178,7 +178,7 @@ $$
 \end{aligned}
 $$
 
-Et voilà! We hebben $x$ gevonden! De [oplossingsverzameling](intro#oplossingsverzameling) van de vergelijking
+Et voilà! We hebben $x$ gevonden! De [oplossingsverzameling](../intro#oplossingsverzameling) van de vergelijking
 is $V = \{-\frac{14}{5}\}$.
 
 ## Samengevat
