--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -31,7 +31,7 @@ $$
 
 
 > Als je de formule voor het differentiequotiënt nog wat beangstigend vindt,
-> lees je best de [les over differentiequotiënt](differentiequotient) nog
+> lees je best de [les over differentiequotiënt](../differentiequotient) nog
 > eens na.
 
 Met die formule kunnen we bijvoorbeeld de _gemiddelde snelheid_ van een wagen
