--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -14,7 +14,7 @@ image: img/zonder_met_afgeleide_fx.png
 ---
 
 In de vorige les zagen we hoe je de [afgeleide voor een bepaalde
-x-waarde](afgeleide) van een functie $f(x)$ kan berekenen. Lees die les
+x-waarde](../afgeleide) van een functie $f(x)$ kan berekenen. Lees die les
 zeker eens na als je nog niet goed begrijpt wat we daar juist mee bedoelen. Je
 kan in die les zien dat het eigenlijk nogal **veel werk** is om zo'n afgeleide
 te berekenen. Zeker als we voor meerdere x-waarden die afgeleide zouden willen
@@ -42,7 +42,7 @@ De afgeleide functie geeft ons een **nieuw functievoorschrift $f'(x)$**. In dat
 voorschrift kunnen we dan weer x-waarden invullen, net zoals we in $f(x)$
 x-waarden kunnen invullen. Als we in $f'(x)$ een x-waarde invullen, berekenen
 we meteen de **afgeleide van $f$ in die x-waarde**. Zo moeten we niet telkens
-al het werk herhalen van de [vorige les](afgeleide).
+al het werk herhalen van de [vorige les](../afgeleide).
 
 ## De afgeleide van een tweedegraadsfunctie
 
@@ -60,7 +60,7 @@ $$
 
 
 We leerden in de vorige les hoe je in een [bepaalde x-waarde de
-afgeleide](afgeleide) kan berekenen. Daarvoor vulden we de x-waarde in in
+afgeleide](../afgeleide) kan berekenen. Daarvoor vulden we de x-waarde in in
 de definitie van een afgeleide. Nu doen we hetzelfde, maar in plaats van een
 bepaald getal in te vullen, **vullen we nu $x$ in**.
 
@@ -72,7 +72,7 @@ $$
 $$
 
 
-Lees zeker [onze introductie tot afgeleiden](afgeleide) eens na als je die
+Lees zeker [onze introductie tot afgeleiden](../afgeleide) eens na als je die
 formule niet zo goed begrijpt. Wij zijn nu op zoek naar **de afgeleide functie
 van een functie**, en dat is niet $f'(\blue{a})$, maar wel $f'(\blue{x})$. We
 moeten in onze definitie van $f'(a)$ de $a$ dus gewoon vervangen door een $x$:
@@ -175,7 +175,7 @@ Ziezo! We hebben de afgeleide functie $f'(x)$ gevonden! 💪
 
 Eens we $f'(x)$ gevonden hebben, kunnen we de afgeleiden van $f(x)$ in eender
 welke x-waarde <Mute>(waarin $f(x)$ afleidbaar is)</Mute> berekenen! In de
-[vorige les](afgeleide) hebben we bijvoorbeeld de afgeleide van de functie
+[vorige les](../afgeleide) hebben we bijvoorbeeld de afgeleide van de functie
 $f(x) = -3x^2 + 4x -1$ in $x=2$ berekend. Dat vergde toen heel wat werk om te
 vinden dat $f'(2)=-8$. Nu kunnen we dezelfde afgeleide veel sneller berekenen
 omdat we nu weten dat $f'(x) = -6x + 4$:
