--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -23,8 +23,8 @@ $$
 
 
 > Komt deze formule wat uit de lucht gevallen voor jou? 🤨 Lees dan zeker onze
-> [les over het berekenen van de afgeleide in een punt](afgeleide) en onze
-> [les over het differentiequotiënt](differentiequotient) eens na.
+> [les over het berekenen van de afgeleide in een punt](../afgeleide) en onze
+> [les over het differentiequotiënt](../differentiequotient) eens na.
 
 We hebben ons echter nooit afgevraagd of die afgeleide wel altijd berekend kan
 worden. In deze les leren we over de **afleidbaarheid** van een functie. We
