--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -24,8 +24,8 @@ $$
 
 
 > Komt deze formule wat uit de lucht gevallen voor jou? 🤨 Lees dan zeker onze
-> [les over het berekenen van de afgeleide in een punt](afgeleide) en onze
-> [les over het differentiequotiënt](differentiequotient) eens na.
+> [les over het berekenen van de afgeleide in een punt](../afgeleide) en onze
+> [les over het differentiequotiënt](../differentiequotient) eens na.
 
 In deze les gaan we leren dat deze formule eigenlijk ook de formule is voor het
 berekenen van de **richtingscoëfficiënt van de raaklijn** aan de grafiek van de
@@ -100,7 +100,7 @@ $f(x)$!
 
 Wanneer we de formule voor de rico van een eerstegraadsfunctie eens goed
 bekijken, zien we toch wel opvallende gelijkenissen met de formule voor het
-[differentiequotiënt](differentiequotient):
+[differentiequotiënt](../differentiequotient):
 
 | Formule voor de rico van een eerstegraadsfunctie                                     | Formule voor het differentiequotiënt                                                 |
 | ------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------ |
@@ -116,7 +116,7 @@ rechte)</Mute> die door de punten met coördinaten $(\orange{x_1},
 
 ## De limiet zorgt voor een raaklijn
 
-In onze les over de [afgeleide in een punt](afgeleide) zagen we dat we de
+In onze les over de [afgeleide in een punt](../afgeleide) zagen we dat we de
 afgeleide van een functie in $x = a$ vinden door het differentiequotiënt
 te berekenen waarbij we $\Delta x$ <Mute>(of $x_2 - x_1$)</Mute> naar $0$
 laten gaan:
