--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -8,7 +8,7 @@ images: []
 title_img: ""
 ---
 
-Een eenterm is een **product van getallen en/of [variabelen](variabelen)**.
+Een eenterm is een **product van getallen en/of [variabelen](../variabelen)**.
 Enkele voorbeelden:
 
 -   De eenterm $\orange{4a^2 b^3}$ is een product van $\orange{4}$,
