--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -15,11 +15,11 @@ title_img: ""
 ---
 
 Het optellen en aftrekken van eentermen zullen we later gebruiken bij het
-vereenvoudigen van [veeltermen](../veeltermen). Het gaat als volgt:
+vereenvoudigen van [veeltermen](../../veeltermen). Het gaat als volgt:
 
-1. [Vereenvoudig](vereenvoudigen) alle eentermen.
-2. Duid de [gelijksoortige](eenterm#gelijksoortige-eentermen) eentermen aan.
-3. Tel per soort de [coëfficiënten](eenterm#coëfficiënt-en-lettergedeelte)
+1. [Vereenvoudig](../vereenvoudigen) alle eentermen.
+2. Duid de [gelijksoortige](../eenterm#gelijksoortige-eentermen) eentermen aan.
+3. Tel per soort de [coëfficiënten](../eenterm#coëfficiënt-en-lettergedeelte)
    op, of trek ze van elkaar af.
 
 Als voorbeeld gebruiken we:
@@ -33,7 +33,7 @@ $$
 ## Vereenvoudig alle eentermen
 
 Hoe we eentermen kunnen vereenvoudigen, vind je terug in [een vorige
-les](vereenvoudigen). De eentermen in ons voorbeeld zijn:
+les](../vereenvoudigen). De eentermen in ons voorbeeld zijn:
 
 -   $-3y\cdot x\cdot(-y)^2\cdot (-2)$
 -   $5x$
@@ -58,7 +58,7 @@ $$
 ## Duid de gelijksoortige eentermen aan
 
 Na het vereenvoudigen, duiden we de [gelijksoortige
-eentermen](eenterm/#gelijksoortige-eentermen) aan. De gelijksoortige
+eentermen](../eenterm/#gelijksoortige-eentermen) aan. De gelijksoortige
 eentermen, zijn hier
 
 -   $6xy^3$ en $2xy^3$ hebben allebei het lettergedeelte $xy^3$
@@ -73,7 +73,7 @@ $$
 
 
 Merk op dat we ook het minteken van $- 8x$ aanduiden, omdat een
-[minteken altijd deel uitmaakt](eenterm/#coëfficiënt-en-lettergedeelte) van
+[minteken altijd deel uitmaakt](../eenterm/#coëfficiënt-en-lettergedeelte) van
 de eenterm waar het bij staat.
 
 ## Tel de coëfficiënt per soort op
