--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -9,7 +9,7 @@ title_img: ""
 ---
 
 Een eenterm bestaat in principe enkel uit een [coëfficiënt en een
-lettergedeelte](eenterm/#coëfficiënt-en-lettergedeelte). Toch kan een
+lettergedeelte](../eenterm/#coëfficiënt-en-lettergedeelte). Toch kan een
 eenterm er soms wat ingewikkeld uitzien. Om een eenterm er zo minst
 angstaanjagend mogelijk te laten uitzien, moeten we de eenterm
 **vereenvoudigen**.
@@ -17,8 +17,8 @@ angstaanjagend mogelijk te laten uitzien, moeten we de eenterm
 Het vereenvoudigen van een eenterm gaat als volgt:
 
 1. Werk de haakjes weg;
-2. Reken de [coëfficiënt](eenterm/#coëfficiënt-en-lettergedeelte) uit;
-3. Reken het [lettergedeelte](eenterm/#coëfficiënt-en-lettergedeelte) uit;
+2. Reken de [coëfficiënt](../eenterm/#coëfficiënt-en-lettergedeelte) uit;
+3. Reken het [lettergedeelte](../eenterm/#coëfficiënt-en-lettergedeelte) uit;
 4. Rangschik de factoren.
 
 Als voorbeeld zullen we volgende eenterm vereenvoudigen:
@@ -167,9 +167,9 @@ $$
 $$
 
 
-De volgende stap is om de [coëfficiënt](eenterm/#coëfficiënt-en-lettergedeelte), of het
+De volgende stap is om de [coëfficiënt](../eenterm/#coëfficiënt-en-lettergedeelte), of het
 _cijfergedeelte_, van de eenterm uit te rekenen. Daarvoor mag je in gedachte alle
-[variabelen](variabelen) even weglaten. Vervolgens reken je de bewerking die
+[variabelen](../variabelen) even weglaten. Vervolgens reken je de bewerking die
 er staat gewoon uit:
 
 
@@ -225,7 +225,7 @@ $$
 $$
 
 We kiezen ervoor om het volledige
-[cijfergedeelte](eenterm/#coëfficiënt-en-lettergedeelte) vooraan te zetten
+[cijfergedeelte](../eenterm/#coëfficiënt-en-lettergedeelte) vooraan te zetten
 en als eerste uit te rekenen.
 
 $$
