--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -18,7 +18,7 @@ image: plt/fx.png
 ---
 
 We kunnen niet altijd eender welk getal als $x$ kiezen om in ons
-[functievoorschrift](voorschrift) te stoppen. Omgekeerd is het mogelijk dat
+[functievoorschrift](../voorschrift) te stoppen. Omgekeerd is het mogelijk dat
 niet eender welk getal als $y$ uit de functie komt. Deze twee eigenschappen van
 een functie worden beschreven door het **domein** en het **beeld** van de
 functie.
@@ -34,7 +34,7 @@ van x-waarden waarvoor er een functiewaarde <Mute>(een y-waarde)</Mute> bestaat.
     y-waarde**.
 
 Een typisch voorbeeld is het domein van de functie die als
-[functievoorschrift](voorschrift) heeft
+[functievoorschrift](../voorschrift) heeft
 
 
 $$
@@ -69,7 +69,7 @@ Het _beeld_ of het _bereik_ van een functie is de verzameling
 van alle y-waarden die ooit uit de functie kunnen komen.
 
 Een typisch voorbeeld is het beeld van de functie die als
-[functievoorschrift](voorschrift) heeft
+[functievoorschrift](../voorschrift) heeft
 
 
 $$
@@ -98,7 +98,7 @@ $$
 ## Domein en beeld op een grafiek
 
 Het domein en beeld van een functie kan je ook aflezen van de [grafiek van die
-functie](grafiek). Neem bijvoorbeeld de grafiek van de functie
+functie](../grafiek). Neem bijvoorbeeld de grafiek van de functie
 
 $$
 f(x) = 3\cdot \sqrt{x + 5} - 6
