--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -20,7 +20,7 @@ image: plt/single_x.png
 ---
 
 We kunnen de waarden voor $\orange{x}$ en $\green{y}$ in een
-[waardentabel](waardentabel) zien als coördinaten van punten op een
+[waardentabel](../waardentabel) zien als coördinaten van punten op een
 assenstelsel. Stel bijvoorbeeld dat we een functie hebben met de volgende
 waardentabel:
 
@@ -66,7 +66,7 @@ doorlopende curve**.  Deze curve noemen we de **grafiek van de functie**.
 ## Hoogstens één $y$ voor elke $x$
 
 We weten dat er bij een functie voor een bepaalde waarde van $x$ [hoogstens
-één](intro#samengevat) waarde van $y$ bestaat. Grafisch betekent dit dat er op
+één](../intro#samengevat) waarde van $y$ bestaat. Grafisch betekent dit dat er op
 de curve van een functie **nooit twee punten boven elkaar liggen**. De curve
 hieronder is een voorbeeld van een curve waar er voor bepaalde waarden van $x$
 **meerdere** waarden van $y$ bestaan. Met andere woorden is hier $y$ **geen
