--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -21,7 +21,7 @@ dan $(\orange{x},~0)$.
 
 Stel dat we een $x$ in het machientje stoppen en dat er $0$ uit komt. Dan noemen
 we $x$ een **nulwaarde** van de functie. Bijvoorbeeld voor de functie met als
-[functievoorschrift](voorschrift)
+[functievoorschrift](../voorschrift)
 
 $$
 f(x) = x - 2
@@ -30,7 +30,7 @@ $$
 is $x=\orange{2}$ een nulwaarde want $f(\orange{2}) = \orange{2} - 2 = 0$.
 
 Je vindt de nulwaarden van een functie door **het functievoorschrift gelijk te
-stellen aan nul** en die [vergelijking op te lossen](../1g_vgl/oplossen). We
+stellen aan nul** en die [vergelijking op te lossen](../../1g_vgl/oplossen). We
 stellen het functievoorschrift gelijk aan _nul_ omdat we op zoek zijn naar de
 x-waarden die het voorschrift <Mute>en dus de y-waarde</Mute> _nul_ maken.
 Voor het bovenstaande voorbeeld:
@@ -56,7 +56,7 @@ dan is het nulpunt $(\orange{-2},~0)$.
 
 ## Nulpunten op een grafiek
 
-We kunnen een functie voorstellen met een [grafiek](grafiek) door de x- en
+We kunnen een functie voorstellen met een [grafiek](../grafiek) door de x- en
 y-waarden als x- en y-coördinaten te interpreteren. De nulpunten van een
 functie kan je snel op de grafiek vinden omdat je weet dat de **y-coördinaat van
 een nulpunt altijd 0 is**. Nulpunten zijn met andere woorden de punten waar de
