--- a/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
+++ b/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
@@ -12,7 +12,7 @@ images: ["/lessen/wiskunde/functies/voorschrift/img/conveyor_functiewaarde.png"]
 image: img/conveyor_functiewaarde.png
 ---
 
-Een [functie](intro) is een verband tussen een $\orange{x}$ en een
+Een [functie](../intro) is een verband tussen een $\orange{x}$ en een
 $\green{y}$ waarbij met elke $\orange{x}$ hoogstens één $\green{y}$
 overeenkomt. Het **functievoorschrift** zegt ons hoe we $\green{y}$ moeten
 berekenen voor een bepaalde $\orange{x}$.
