--- a/src/content/lessen/wiskunde/functies/waardentabel/index.mdx
+++ b/src/content/lessen/wiskunde/functies/waardentabel/index.mdx
@@ -13,7 +13,7 @@ title_img: ""
 ---
 
 We kunnen ons nu helemaal laten gaan en allerlei waarden voor $x$ in
-[het functievoorschrift](voorschrift) beginnen gooien. Om het een beetje proper te
+[het functievoorschrift](../voorschrift) beginnen gooien. Om het een beetje proper te
 houden, is het misschien geen slecht idee om alles in een tabelletje te gieten.
 Zo hebben we een handig overzicht van wat we in de functie stopten ($x$) en wat
 eruit kwam ($y$). We noemen zo'n tabel **een waardentabel**.
@@ -21,7 +21,7 @@ eruit kwam ($y$). We noemen zo'n tabel **een waardentabel**.
 ## Hoe een waardentabel eruit ziet
 
 Typisch kan een waardentabel in twee vormen voorkomen. De ingangen van [het
-machientje](intro) ($x$)
+machientje](../intro) ($x$)
 _links_ en de uitgangen ($y$) _rechts_ of de ingangen ($x$) _bovenaan_ en de
 uitgangen ($y$) _onderaan_.
 
@@ -51,7 +51,7 @@ uitrekenen.
 
 Merk op dat in de tabellen er telkens maar één $y$ staat naast (of onder) een
 bepaalde $x$. Dat kan ook niet anders volgens de [definitie van een
-functie](intro#samengevat). Die zegt dat er _voor elke $x$ hoogstens één
+functie](../intro#samengevat). Die zegt dat er _voor elke $x$ hoogstens één
 $y$ bestaat_.
 
 **Omgekeerd is het echter niet waar.** Het is perfect mogelijk dat een $y$
