--- a/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
@@ -77,7 +77,7 @@ Vervolgens noteren we de lengte na het gelijkheidsteken. Een getal alleen, zoals
 Alleen Engelsen, Amerikanen, Canadezen... doen een beetje moeilijk en werken met een ander systeem, <Mute text=" namelijk het Brits-Amerikaanse maatsysteem of The Imperial System"/>.
 
 Het **metriek stelsel** ken je gegarandeerd. Ik noem enkele voorbeelden: centimeter (cm), kilogram (kg), seconden (s)... Klinkt het bekend in de oren? 👂
-> De [les over grootheden en eenheden](../../fysica/grootheden_eenheden/intro) gaat dieper in op deze eenheden, zeker eens de moeite om te lezen!
+> De [les over grootheden en eenheden](/lessen/fysica/grootheden_eenheden/intro) gaat dieper in op deze eenheden, zeker eens de moeite om te lezen!
 
 In de meetkunde maken we vooral (zo goed als altijd) gebruik van **afstandsmaten**. Dit zijn de **centimeter**, **decimeter**, **meter**... Twee centimeter wil dan eigenlijk niets anders zeggen dan: twee maal de lengte van een centimeter. Een correcte notatie voor de lengte van [AB] is dus $|AB| = 4 \si{ cm}$.
 
