--- a/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
@@ -38,7 +38,7 @@ Astronomen hebben een denkbeeldige driehoek geconstrueerd met drie extreem veraf
 </Expand>
 
 ## Merkwaardige lijnen
-Een driehoek heeft verschillende **merkwaardige lijnen**. Dit zijn lijnen met een of meerdere speciale eigenschappen. Twee van zulke merkwaardige lijnen, de [middelloodlijn](./rechten) en [bissectrice](./hoeken), hebben we reeds behandeld in vorige lessen. **In het geval van een driehoek** wordt deze eigenschap dan **toegepast** op een zijde of hoek van de **driehoek**. 
+Een driehoek heeft verschillende **merkwaardige lijnen**. Dit zijn lijnen met een of meerdere speciale eigenschappen. Twee van zulke merkwaardige lijnen, de [middelloodlijn](../rechten) en [bissectrice](../hoeken), hebben we reeds behandeld in vorige lessen. **In het geval van een driehoek** wordt deze eigenschap dan **toegepast** op een zijde of hoek van de **driehoek**. 
 
 <Attention title="Middelloodlijn van een driehoek">
 
@@ -50,7 +50,7 @@ Een **middelloodlijn van een driehoek** is de rechte die **door het midden** gaa
 Een **bissectrice van een driehoek** is de rechte die door een **hoekpunt** gaat en de bijhorende hoek in **twee even grote hoeken** verdeelt.
 </Attention>
 
-De **hoogtelijn** van een driehoek werkt **analoog** aan de methode voor het bepalen van [de afstand tussen een punt en een rechte](./rechten) 😁. Het enige verschil hierbij is dat het hier om een **rechte** gaat en niet om een lijnstuk (waarvan we de lengte kunnen meten).
+De **hoogtelijn** van een driehoek werkt **analoog** aan de methode voor het bepalen van [de afstand tussen een punt en een rechte](../rechten) 😁. Het enige verschil hierbij is dat het hier om een **rechte** gaat en niet om een lijnstuk (waarvan we de lengte kunnen meten).
 
 ![Twee verschillende driehoeken met een getekende hoogtelijn.](img/hoogtelijn.png)
 
