--- a/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
@@ -25,7 +25,7 @@ Voor de volledigheid vermelden we hier nog even **de vlakke figuren** waarvan je
 
 ![Een overzicht van de vlakke figuren: vierkant, rechthoek, driehoek, trapezium, parallellogram, veelhoek en cirkel.](img/vlakke_figuren.png)
 
-> In de lessen over [driehoeken](./driehoeken), [vierhoeken](./vierhoeken) en [cirkels](./cirkels) kan je meer leren over deze vlakke figuren. 🙌
+> In de lessen over [driehoeken](../driehoeken), [vierhoeken](../vierhoeken) en [cirkels](../cirkels) kan je meer leren over deze vlakke figuren. 🙌
 
 ## Ruimtefiguren weergeven in 2D
 We zijn allemaal wel al eens ruimtefiguren tegengekomen die zijn afgebeeld op een blad papier. Hiervoor gebruikt men **perspectieven**, zodat we **een gevoel van drie dimensies** krijgen op een tweedimensionaal vlak. 
@@ -69,7 +69,7 @@ Tot slot bestaat er ook nog een **prisma**. Dit is **elke figuur met hetzelfde g
 ## Evenwijdige en snijdende vlakken
 Net zoals rechten, kunnen **vlakken evenwijdig zijn aan elkaar of elkaar snijden**.
 
-> Herinner je je dit niet meer? 🤔 Lees dan nog snel even [de les over rechten](./rechten)! 🕶️📏
+> Herinner je je dit niet meer? 🤔 Lees dan nog snel even [de les over rechten](../rechten)! 🕶️📏
 
 De definitie is namelijk voor beide **juist hetzelfde**. Alleen gaat het hier niet over rechten, maar over vlakken!
 
