--- a/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
@@ -36,7 +36,7 @@ Daarnaast zijn er nog drie <Mute text="nieuwe"/> termen: een **nulhoek**, **gest
 Echt moeilijk te onthouden zijn ze niet, toch?! 🧐😉
 
 ## Wat is de bissectrice van een hoek?
-In [de les over rechten](./rechten) hebben we de definitie van het midden van een lijnstuk gezien. Ook **hoeken** kunnen we **verdelen in twee gelijke hoeken**. De lijn die de hoek verdeelt noemt men de **deellijn of bissectrice**. 
+In [de les over rechten](../rechten) hebben we de definitie van het midden van een lijnstuk gezien. Ook **hoeken** kunnen we **verdelen in twee gelijke hoeken**. De lijn die de hoek verdeelt noemt men de **deellijn of bissectrice**. 
 
 ![De bissectrice (of deellijn) van een hoek is de rechte die de hoek in twee even grote hoeken verdeelt.](img/bissectrice.png)
 
