--- a/src/content/lessen/wiskunde/meetkunde_1/omtrek/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/omtrek/index.mdx
@@ -16,7 +16,7 @@ De **omtrek** is de **totale lengte van de buitenzijde**. Dat wil zeggen dat je 
 Zoals hierboven ️ reeds vermeld is de omtrek **de som van alle (buiten)zijden**. Je **meet** dus de lengte van alle zijden en **telt** deze **op**. Dit werkt voor elke figuur.
 
 Voor sommige figuren, zoals een vierkant of een ruit, kan het echter **eenvoudiger**. Heb je een idee waarom? 🧐
-> Geen idee? Bekijk [de les over vierhoeken](./vierhoeken) nog eens grondig! 💪
+> Geen idee? Bekijk [de les over vierhoeken](../vierhoeken) nog eens grondig! 💪
 
 Bij een **ruit** en een **vierkant** is het zo dat de **vier zijden even lang** zijn. Als je dus **één zijde** meet en deze **vermenigvuldigt met vier**, dan heb je ook meteen de omtrek van die figuur.
 
