--- a/src/content/lessen/wiskunde/meetkunde_1/vierhoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/vierhoeken/index.mdx
@@ -21,7 +21,7 @@ Elke **vlakke figuur** die wordt gevormd door **vier zijden** en **vier hoeken**
 
 In bovenstaande vierhoek kunnen we ook nog **diagonalen** tekenen. Dit is een **lijnstuk** dat **twee niet-aangrenzende hoekpunten** met elkaar verbindt. In bovenstaande figuur wordt dit dan [AD] en [BC]. <Mute text="Druk op 'Toon uitleg' om deze te zien."/>
 
-Net zoals bij [driehoeken](./driehoeken) kunnen we ook spreken van **overstaande zijden en hoeken**. 📐 Dit zijn steeds de zijden en hoeken die **het verst** van elkaar liggen. Met andere woorden de hoeken die het **minst met elkaar gemeen** hebben. 
+Net zoals bij [driehoeken](../driehoeken) kunnen we ook spreken van **overstaande zijden en hoeken**. 📐 Dit zijn steeds de zijden en hoeken die **het verst** van elkaar liggen. Met andere woorden de hoeken die het **minst met elkaar gemeen** hebben. 
 
 ## De som van de hoeken van een vierhoek is 360°
 Naast het feit dat alle **vierhoeken** vier zijden en vier hoeken hebben, is **de som van de hoeken** ook steeds gelijk. Dit komt namelijk altijd uit op **360°**.
@@ -73,7 +73,7 @@ In een parallellogram zijn de **overstaande zijden even lang** en de **overstaan
 </Attention>
 
 ## De rechthoek
-Een **rechthoek** is een vierhoek met **vier rechte hoeken**. Als je je de [les over rechten](./rechten) nog herinnert 💡, dan weet je dat wanneer **twee rechten loodrecht op eenzelfde derde rechte** staan, de rechten **onderling evenwijdig** zijn. We kunnen dit ook toepassen op een rechthoek (de zijden liggen op een rechte), waardoor we onmiddellijk kunnen afleiden dat een rechthoek **twee paar evenwijdige zijden** heeft. Met andere woorden: een **rechthoek** is ook een **parallellogram** en dus ook een **trapezium**. 🤯
+Een **rechthoek** is een vierhoek met **vier rechte hoeken**. Als je je de [les over rechten](../rechten) nog herinnert 💡, dan weet je dat wanneer **twee rechten loodrecht op eenzelfde derde rechte** staan, de rechten **onderling evenwijdig** zijn. We kunnen dit ook toepassen op een rechthoek (de zijden liggen op een rechte), waardoor we onmiddellijk kunnen afleiden dat een rechthoek **twee paar evenwijdige zijden** heeft. Met andere woorden: een **rechthoek** is ook een **parallellogram** en dus ook een **trapezium**. 🤯
 
 <ToggleImage toggleText="Toon uitleg">
 
