--- a/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
@@ -11,7 +11,7 @@ de wiskunde proberen we alles zo kort mogelijk te noteren. Zo leerde je vroeger 
 dat je de som $5 + 5 + 5$ ook kan schrijven als $3 \cdot 5$. In deze les gaan we bekijken 
 hoe we producten zoals $5 \cdot 5 \cdot 5$ korter kunnen schrijven.
 
-> Voor je aan deze les begint, fris je best eerst even de [les over vermenigvuldigen](./rekenen_gehele_getallen) op! 😉
+> Voor je aan deze les begint, fris je best eerst even de [les over vermenigvuldigen](../rekenen_gehele_getallen) op! 😉
 
 ## Wat is een grondtal en een exponent?
 De uitdrukking uit de inleiding kunnen we herschrijven als: 
