--- a/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
@@ -6,7 +6,7 @@ image: ./img/vierkantswortel_terminologie.png
 tags: ["Vierkantswortels", "Rekenen", "Bewerkingen", "Breuken", "Kommagetallen", "Rationale getallen"]
 description: "In deze les herhalen we wat een vierkantswortel precies is en leren we de vierkantswortel te nemen van breuken en kommagetallen."
 ---
-Net zoals de deling het omgekeerde is van de vermenigvuldiging, zijn **wortels** 🥕 het omgekeerde van [machten](./machten). 
+Net zoals de deling het omgekeerde is van de vermenigvuldiging, zijn **wortels** 🥕 het omgekeerde van [machten](../machten). 
 
 ## Wat is een vierkantswortel?
 
