--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -81,7 +81,7 @@ $$
 
 > Als je niet meer goed weet wat het juist betekent om een veelterm te
 > _"herleiden"_, lees dan zeker onze les over het [vereenvoudigen en herleiden
-> van een veelterm](vereenvoudigen) eens na.
+> van een veelterm](../vereenvoudigen) eens na.
 
 Het **aftrekken** van twee veeltermen gaat zo:
 
@@ -131,7 +131,7 @@ Het vermenigvuldigen van een eenterm met een veelterm gaat als volgt:
 
 > Ben je even vergeten wat nu weer de _"coëfficiënt"_ en het _"lettergedeelte"_
 > was van een eenterm? Lees dan zeker onze [les over
-> eentermen](../eentermen/eenterm) even na.
+> eentermen](../../eentermen/eenterm) even na.
 
 Stel bijvoorbeeld dat we de volgende berekening moeten maken:
 
@@ -295,7 +295,7 @@ veelterm met elke term van de andere veelterm te vermenigvuldigen. We beginnen
 met de _eerste term van de eerste veelterm_ te vermenigvuldigen met de tweede
 veelterm. Dit doen we op precies dezelfde manier als hoe we een [eenterm
 vermenigvuldigen met een
-veelterm](##een-veelterm-vermenigvuldigen-met-een-eenterm) Zo kunnen we al het
+veelterm](#een-veelterm-vermenigvuldigen-met-een-eenterm) Zo kunnen we al het
 eerste stuk van onze uitkomst beginnen schrijven:
 
 
@@ -335,7 +335,7 @@ vereenvoudigen of herleiden.
 
 > Als je niet meer goed weet wat het juist betekent om een veelterm te
 > _"herleiden"_, lees dan zeker onze les over het [vereenvoudigen en herleiden
-> van een veelterm](vereenvoudigen) eens na.
+> van een veelterm](../vereenvoudigen) eens na.
 
 We zoeken naar termen met **hetzelfde lettergedeelten** en tellen de
 coëfficiënten van deze termen bij elkaar op:
