--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -125,7 +125,7 @@ al meteen te rangschikken, zullen we in de volgende stap heel eenvoudig de
 gelijksoortige eentermen kunnen vinden.
 
 > Als je niet meer goed weet hoe je een eenterm vereenvoudigt, lees je best
-> onze les over het [vereenvoudigen van eentermen](../eentermen/vereenvoudigen)
+> onze les over het [vereenvoudigen van eentermen](../../eentermen/vereenvoudigen)
 > eens na. Enkele voorbeelden:
 
 - Vb. 1:
@@ -155,7 +155,7 @@ eentermen te vinden.
 
 > Als je niet meer goed weet wat we bedoelen met _"gelijksoortige eentermen"_
 > lees dan zeker onze [introductieles over
-> eentermen](../eentermen/eenterm/#gelijksoortige-eentermen) eens na.
+> eentermen](../../eentermen/eenterm/#gelijksoortige-eentermen) eens na.
 
 Hieronder hebben we per veelterm de gelijksoortige eentermen aangeduid in
 dezelfde kleur:
@@ -185,7 +185,7 @@ tellen** en het **lettergedeelte te laten staan**.
 
 > Als je niet meer goed weet wat we bedoelen met _"coëfficiënten"_ en
 > _"lettergedeelte"_, lees dan zeker onze [introductieles over
-> eentermen](../eentermen/eenterm/#gelijksoortige-eentermen) eens na.
+> eentermen](../../eentermen/eenterm/#gelijksoortige-eentermen) eens na.
 
 We werken de voorbeelden van hierboven verder uit:
 
@@ -233,7 +233,7 @@ volgens graad zodat bv. de term $x^2y$ vóór $xy^2$ komt te staan en de term
 $x^3$ vóór $y^3$.
 
 > Als je bent vergeten hoe je de graad van een eenterm vindt, lees dan zeker
-> onze [introductieles over eentermen](../eentermen/eenterm) eens na.
+> onze [introductieles over eentermen](../../eentermen/eenterm) eens na.
 
 Enkele voorbeelden van het rangschikken volgens dalende graad van de eentermen:
 
