--- a/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
@@ -6,9 +6,9 @@ tags: ["prefix", "voorvoegsel", "prefix omzetten", "kilometer naar meter", "gram
 description: "In deze les leggen we uit wat prefixen of voorvoegsels zijn en hoe je van en naar prefixen kan omzetten."
 ---
 
-We kunnen grootheden zoals _lengte_ beschrijven met eenheden zoals _meter_. In een vorige les zagen we dat elke [grootheid een officiële SI-eenheid heeft](intro#si-eenheden-maken-duidelijke-afspraken). De officiële eenheid van _tijd_ is bijvoorbeeld de seconde.
+We kunnen grootheden zoals _lengte_ beschrijven met eenheden zoals _meter_. In een vorige les zagen we dat elke [grootheid een officiële SI-eenheid heeft](../intro#si-eenheden-maken-duidelijke-afspraken). De officiële eenheid van _tijd_ is bijvoorbeeld de seconde.
 
-In een [andere les](machten_van_10) zagen we hoe we machten van 10 kunnen gebruiken om heel grote of heel kleine getallen korter en leesbaarder te schrijven.
+In een [andere les](../machten_van_10) zagen we hoe we machten van 10 kunnen gebruiken om heel grote of heel kleine getallen korter en leesbaarder te schrijven.
 
 Om alles nog korter en leesbaarder te schrijven, gebruiken we vaak
 **prefixen**. Een prefix <Mute>(of voorvoegsel)</Mute> schrijf je telkens
@@ -46,7 +46,7 @@ $184 \orange{\si{ p}} \si{m}$.
 
 ## Een prefix omzetten naar een macht van 10
 
-Voor grote afstanden maken we vaak gebruik van de kilometer ($\si{km}$). De [SI-eenheid](intro#si-eenheden-maken-duidelijke-afspraken) van afstand is echter de meter ($\si{m}$). We moeten daarom vaak $\si{km}$ omzetten naar $\si{m}$. In de tabel hierboven zien we dat die $\si{k}$ hetzelfde is als $10^{3}$. Voor het omzetten van $\si{km}$ naar $\si{m}$ moet je dan gewoon de $\si{k}$ vervangen door $10^{3}$.
+Voor grote afstanden maken we vaak gebruik van de kilometer ($\si{km}$). De [SI-eenheid](../intro#si-eenheden-maken-duidelijke-afspraken) van afstand is echter de meter ($\si{m}$). We moeten daarom vaak $\si{km}$ omzetten naar $\si{m}$. In de tabel hierboven zien we dat die $\si{k}$ hetzelfde is als $10^{3}$. Voor het omzetten van $\si{km}$ naar $\si{m}$ moet je dan gewoon de $\si{k}$ vervangen door $10^{3}$.
 
 Bijvoorbeeld: de afstand tussen Brussel en Amsterdam is ongeveer $173{,}89 \si{ km}$ in vogelvlucht. Zet dit om naar de juiste SI-eenheid.
 
@@ -59,7 +59,7 @@ $$
 
 ## Een prefix toevoegen aan een eenheid
 
-De [SI-eenheid](intro#si-eenheden-maken-duidelijke-afspraken) van massa is de kilogram ($\si{kg}$). Vaak wordt een massa echter ook uitgedrukt in gram ($\si{g}$). Als we een massa in $\si{g}$ moeten omzetten naar de SI-eenheid $\si{kg}$, zullen we dus een prefix moeten _toevoegen_. Omdat elke prefix een macht van 10 voorstelt, is het toevoegen van een prefix hetzelfde als het toevoegen van een macht van 10. In het geval van $\si{g}$ omzetten naar $\si{kg}$, moeten we een $\si{k}$ toevoegen of dus $10^3$. In de [les over machten van 10](machten_van_10#machten-van-10-omzetten) zagen we hoe we zo'n $10^3$ konden toevoegen zonder de waarde van een getal te veranderen.
+De [SI-eenheid](../intro#si-eenheden-maken-duidelijke-afspraken) van massa is de kilogram ($\si{kg}$). Vaak wordt een massa echter ook uitgedrukt in gram ($\si{g}$). Als we een massa in $\si{g}$ moeten omzetten naar de SI-eenheid $\si{kg}$, zullen we dus een prefix moeten _toevoegen_. Omdat elke prefix een macht van 10 voorstelt, is het toevoegen van een prefix hetzelfde als het toevoegen van een macht van 10. In het geval van $\si{g}$ omzetten naar $\si{kg}$, moeten we een $\si{k}$ toevoegen of dus $10^3$. In de [les over machten van 10](../machten_van_10#machten-van-10-omzetten) zagen we hoe we zo'n $10^3$ konden toevoegen zonder de waarde van een getal te veranderen.
 
 Het komt erop neer dat we zowel $\cdot 10^3$ als $\cdot 10^{-3}$ achter ons getal gaan schrijven. De $\cdot 10^3$ vervangen we dan door de prefix $\si{k}$ en de $\cdot 10^{-3}$ rekenen we uit.
 
@@ -76,7 +76,7 @@ $$
 
 ## Een prefix omzetten naar een andere prefix
 
-Eens je weet welke prefix overeenkomt met welke macht van 10 (en omgekeerd), is het omzetten van prefixen hetzelfde als het [omzetten van machten van 10](machten_van_10#machten-van-10-omzetten).
+Eens je weet welke prefix overeenkomt met welke macht van 10 (en omgekeerd), is het omzetten van prefixen hetzelfde als het [omzetten van machten van 10](../machten_van_10#machten-van-10-omzetten).
 Het enige wat je extra moet doen is het omzetten van prefixen naar machten van 10 en terug.
 
 Stel dat we $5{,}2 \green{\si{ k}}\si{m}$ willen omzetten naar $\blue{\si{d}}\si{m}$. Dat kan je doen als volgt:
