--- a/src/content/lessen/fysica/grootheden_eenheden/wetenschappelijke_notatie/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/wetenschappelijke_notatie/index.mdx
@@ -12,7 +12,7 @@ images: []
 title_img: ""
 ---
 
-_Wetenschappelijke schrijfwijze_ is een manier om getallen te noteren. Het houdt in dat je **de komma verschuift tot die na het eerste [beduidend cijfer](beduidende_cijfers)** staat. Om het getal gelijk te houden, moet je samen met het verschuiven van de komma ook een [macht van 10](machten_van_10) toevoegen.
+_Wetenschappelijke schrijfwijze_ is een manier om getallen te noteren. Het houdt in dat je **de komma verschuift tot die na het eerste [beduidend cijfer](../beduidende_cijfers)** staat. Om het getal gelijk te houden, moet je samen met het verschuiven van de komma ook een [macht van 10](../machten_van_10) toevoegen.
 
 Enkele voorbeelden van getallen in wetenschappelijke schrijfwijze:
 
@@ -43,10 +43,10 @@ $$
 
 ## Omzetten naar wetenschappelijke schrijfwijze
 
-We hebben in de les over machten van 10 gezien hoe we zonder problemen de [komma een bepaald aantal plaatsen kunnen verschuiven](machten_van_10#getallen-omzetten-naar-een-macht-van-10).
+We hebben in de les over machten van 10 gezien hoe we zonder problemen de [komma een bepaald aantal plaatsen kunnen verschuiven](../machten_van_10#getallen-omzetten-naar-een-macht-van-10).
 We passen hier dezelfde techniek toe om de komma te verschuiven tot na het eerste beduidend cijfer, zodat we het getal omzetten naar wetenschappelijke schrijfwijze.
 
-Bijvoorbeeld: zet $-345{,}2$ om naar wetenschappelijke schrijfwijze. Dat wil zeggen: verschuif de komma tot die na het eerste beduidend cijfer staat. Hier betekent dat: **twee plaatsen naar links**. Met [de techniek](machten_van_10#getallen-omzetten-naar-een-macht-van-10) uit de les over machten van 10, gaat dat als volgt:
+Bijvoorbeeld: zet $-345{,}2$ om naar wetenschappelijke schrijfwijze. Dat wil zeggen: verschuif de komma tot die na het eerste beduidend cijfer staat. Hier betekent dat: **twee plaatsen naar links**. Met [de techniek](../machten_van_10#getallen-omzetten-naar-een-macht-van-10) uit de les over machten van 10, gaat dat als volgt:
 
 $$
 \begin{aligned}
