--- a/src/content/lessen/fysica/krachten_1/intro/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/intro/index.mdx
@@ -7,7 +7,7 @@ image: img/kracht_effecten.png
 description: "In deze les introduceren we de grootheid kracht, met als eenheid de newton. We bespreken het statisch en dynamisch effect dat krachten kunnen hebben en vertellen over veld- en contactkrachten."
 ---
 
-Een van de meest fundamentele [grootheden](../grootheden_eenheden/intro) in de
+Een van de meest fundamentele [grootheden](../../grootheden_eenheden/intro) in de
 fysica is **kracht**. Kracht is een maat voor op welke manier er wordt
 **geduwd** tegen of **getrokken** aan een voorwerp. Wanneer een kracht inwerkt
 op een voorwerp, kan de kracht een **verandering van de snelheid** en/of een
@@ -28,7 +28,7 @@ Je komt krachten voortdurend tegen in het dagelijkse leven:
 ![](img/krachten_voorbeelden.png)
 
 Het symbool voor de grootheid kracht is $F$ <Mute>(van het Engelse <em>force</em>)</Mute> en de
-[SI-eenheid](../grootheden_eenheden/intro##si-eenheden-maken-duidelijke-afspraken)
+[SI-eenheid](../../grootheden_eenheden/intro##si-eenheden-maken-duidelijke-afspraken)
 is **de newton** (symbool: $\si{N}$), genoemd naar de bekende natuurkundige
 [Isaac Newton](https://nl.m.wikipedia.org/wiki/Isaac_Newton).
 
