--- a/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
@@ -25,15 +25,15 @@ hoort daar dus niet bij.
 De krachten op Maria zijn:
 
 -   de kracht van Dirk op Maria $\red{\vec{F}_{DM}}$,
--   [de zwaartekracht](zwaartekracht) $\red{\vec{F}_{zM}}$ die de aarde uitoefent
+-   [de zwaartekracht](../zwaartekracht) $\red{\vec{F}_{zM}}$ die de aarde uitoefent
     op Maria,
--   [de normaalkracht](normaalkracht_en_gewicht) $\red{\vec{F}_{nM}}$ die de schaatsbaan
+-   [de normaalkracht](../normaalkracht_en_gewicht) $\red{\vec{F}_{nM}}$ die de schaatsbaan
     uitoefent op Maria.
 
 ![](img/krachten_maria.png)
 
 Merk op hoe we [krachten
-noteren](krachtvector#kracht-is-een-vectoriële-grootheid).
+noteren](../krachtvector#kracht-is-een-vectoriële-grootheid).
 $\vec{F}_{DM}$ betekent: "de kracht van
 **D**irk op **M**aria", terwijl $\vec{F}_{MD}$ betekent "de kracht van
 **M**aria op **D**irk".
