--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -6,7 +6,7 @@ tags: []
 image: plt/snijpunt.png
 ---
 
-[Vergelijkingen](intro) en [functies](../functies/intro) zijn zeer nauw
+[Vergelijkingen](../intro) en [functies](../../functies/intro) zijn zeer nauw
 met elkaar verbonden. Twee belangrijke toepassingen van vergelijkingen zijn dan
 ook
 
@@ -14,7 +14,7 @@ ook
 2. De nulpunten zoeken van twee functies.
 
 In deze les bespreken we deze toepassingen in het geval van
-[eerstegraadsvergelijkingen met één onbekende](oplossen).
+[eerstegraadsvergelijkingen met één onbekende](../oplossen).
 
 ## Snijpunten van functies
 
@@ -27,13 +27,13 @@ $$
 \end{aligned}
 $$
 
-De [grafiek](../functies/grafiek) van deze functies ziet er als volgt uit:
+De [grafiek](../../functies/grafiek) van deze functies ziet er als volgt uit:
 
 <Bokeh plot="plt/snijpunt" />
 
 Het oranje punt duidt het <Orange>snijpunt</Orange> aan van de twee functies. Hoe kunnen we de coördinaten van dit snijpunt vinden?
 
-Een snijpunt is een punt dat zowel op de grafiek van $\green{f}$ als op de grafiek van $\blue{g}$ ligt. Denkend aan onze analogie van [het machientje](../functies/intro#een-functie-is-een-machientje), is de $x-$waarde van een snijpunt een **ingang die voor zowel $\green{f}$ als $\blue{g}$ dezelfde uitgang geeft**.
+Een snijpunt is een punt dat zowel op de grafiek van $\green{f}$ als op de grafiek van $\blue{g}$ ligt. Denkend aan onze analogie van [het machientje](../../functies/intro#een-functie-is-een-machientje), is de $x-$waarde van een snijpunt een **ingang die voor zowel $\green{f}$ als $\blue{g}$ dezelfde uitgang geeft**.
 
 ![](img/conveyor_snijpunt_1.png)
 
@@ -47,7 +47,7 @@ $$
 $$
 
 En **poef** ✨🧙! We krijgen een **vergelijking**. Als we deze [vergelijking
-oplossen](oplossen), vinden we de $x-$coördinaat van het snijpunt van
+oplossen](../oplossen), vinden we de $x-$coördinaat van het snijpunt van
 $\green{f}$ en $\blue{g}$:
 
 $$
@@ -110,7 +110,7 @@ Als we een <Orange>nulwaarde</Orange> van een functie in die functie stoppen, ko
 
 ![](img/conveyor_nulpunt_1.png)
 
-Stel dat $\orange{x}$ een [nulwaarde](../functies/nulpunten#nulwaarden-van-een-functie) van functie $f(x) = -x + 4$ is, dan is $f(\orange{x}) = 0$, of na invullen:
+Stel dat $\orange{x}$ een [nulwaarde](../../functies/nulpunten#nulwaarden-van-een-functie) van functie $f(x) = -x + 4$ is, dan is $f(\orange{x}) = 0$, of na invullen:
 
 $$
 -\orange{x} + 4 = 0
@@ -137,7 +137,7 @@ y-coördinaat)</Mute>.  Dit kan je ook zien op onderstaande grafiek:
 
 <Attention title="Snijpunten van twee functies">
 
-De **snijpunten** van twee functies $f(x)$ en $g(x)$ vind je door eerst de twee **[functievoorschriften](../functies/voorschrift) aan elkaar gelijk te stellen**:
+De **snijpunten** van twee functies $f(x)$ en $g(x)$ vind je door eerst de twee **[functievoorschriften](../../functies/voorschrift) aan elkaar gelijk te stellen**:
 
 $$
 \begin{aligned}
@@ -151,7 +151,7 @@ De oplossing van deze vergelijking geeft de $x-$coördinaat van elk snijpunt. Al
 
 <Attention title="Nulpunten van een functie">
 
-De **nulpunten** van een functie $f(x)$ vind je door het **[functievoorschrift](../functies/voorschrift) gelijk aan nul te stellen**:
+De **nulpunten** van een functie $f(x)$ vind je door het **[functievoorschrift](../../functies/voorschrift) gelijk aan nul te stellen**:
 
 $$
 \begin{aligned}
