--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -87,7 +87,7 @@ Het vermenigvuldigen van eentermen gaat als volgt:
 
 > Ben je even vergeten wat nu weer de _"coëfficiënt"_ en het _"lettergedeelte"_
 > was van een eenterm? Lees dan zeker onze [les over
-> eentermen](../eentermen/eenterm) even na.
+> eentermen](../../eentermen/eenterm) even na.
 
 Stel bijvoorbeeld dat we de volgende eentermen met elkaar willen
 vermenigvuldigen:
