--- a/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
@@ -109,7 +109,7 @@ $$
 
 Laten we het laatste voorbeeld nog eens van dichterbij bekijken. 🔎 We kunnen $\frac{25}{5}$ namelijk ook schrijven als $\frac{5}{1}$ <Mute text="of simpelweg als 5."/> Als we dit doen is de breuk **niet meer gelijknamig** met de anderen, want de **noemer is veranderd**. 
 
-Omgekeerd kunnen we ook **een breuk gelijknamig maken**. Hoe we dit doen en waarom we dit gebruiken kan je lezen in de les over [het optellen en aftrekken van breuken en kommagetallen](./optellen_aftrekken).
+Omgekeerd kunnen we ook **een breuk gelijknamig maken**. Hoe we dit doen en waarom we dit gebruiken kan je lezen in de les over [het optellen en aftrekken van breuken en kommagetallen](../optellen_aftrekken).
 
 ## Breuken, kommagetallen en procenten
 Breuken, kommagetallen <Mute text="of decimale vormen"/> en procenten behoren allemaal tot dezelfde familie. **Kan jij hun relatie vinden uit onderstaande tabel?** 🧐
